# langram_models

./: .gitignore  Cargo.toml  README.md  build.rs
models/aceArab/: bigrams.encom.br  fivegrams.encom.br  quadrigrams.encom.br  trigrams.encom.br  unigrams.encom.br  wordgrams.encom.br
models/aceLatn/: bigrams.encom.br  fivegrams.encom.br  quadrigrams.encom.br  trigrams.encom.br  unigrams.encom.br  wordgrams.encom.br
models/acmArab/: bigrams.encom.br  fivegrams.encom.br  quadrigrams.encom.br  trigrams.encom.br  unigrams.encom.br  wordgrams.encom.br
models/acqArab/: bigrams.encom.br  fivegrams.encom.br  quadrigrams.encom.br  trigrams.encom.br  unigrams.encom.br  wordgrams.encom.br
models/aebArab/: bigrams.encom.br  fivegrams.encom.br  quadrigrams.encom.br  trigrams.encom.br  unigrams.encom.br  wordgrams.encom.br
models/afrLatn/: bigrams.encom.br  fivegrams.encom.br  quadrigrams.encom.br  trigrams.encom.br  unigrams.encom.br  wordgrams.encom.br
models/ajpArab/: bigrams.encom.br  fivegrams.encom.br  quadrigrams.encom.br  trigrams.encom.br  unigrams.encom.br  wordgrams.encom.br
models/alsLatn/: bigrams.encom.br  fivegrams.encom.br  quadrigrams.encom.br  trigrams.encom.br  unigrams.encom.br  wordgrams.encom.br
models/amhEthi/: bigrams.encom.br  fivegrams.encom.br  quadrigrams.encom.br  trigrams.encom.br  unigrams.encom.br  wordgrams.encom.br
models/apcArab/: bigrams.encom.br  fivegrams.encom.br  quadrigrams.encom.br  trigrams.encom.br  unigrams.encom.br  wordgrams.encom.br
models/arbArab/: bigrams.encom.br  (+5 more)
src/: lib.rs  main.rs
tests/: count.rs
(+1083 files in other folders)
