[package]
name = "langram_models"
version = "0.0.1"
authors = ["Dmitry Rodionov <gh@rdmtr.com>"]
description = "Langram models"
repository = "https://github.com/RoDmitry/langram_models"
include = ["src", "models"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
langram = { path = "../langram" }
rkyv = "0.8"
threadpool = "1"
